# MonteCarloPi

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  main.c  monte_carlo_pi_cuda  monte_carlo_pi_cuda.cu  monte_carlo_pi_parallel  monte_carlo_pi_parallel.c  monte_carlo_pi_sequentiell  monte_carlo_pi_sequentiell.c  pi  run.sh
.cmake/api/v1/reply/: cache-v2-519b4dbb61a8977cb35e.json  cache-v2-ce76b8b518a42ac6721c.json  cmakeFiles-v1-afe4bb177b8d3d763681.json  cmakeFiles-v1-f7222ed0cc6a9fa0c76a.json  codemodel-v2-0a52259f72ee2d927a68.json  index-2024-12-09T08-44-33-0021.json  index-2024-12-09T08-56-22-0568.json  target-monte_carlo_pi_parallel-Debug-bd4fc42c5c00ff30084e.json  target-monte_carlo_pi_sequentiell-Debug-bc2466ef5b3ac12cda02.json  target-run_all-Debug-8fc476c27febe1af8a51.json
